Dataframe de frequencias completo

--- a/extas_hgf.ipynb
+++ b/extas_hgf.ipynb
@@ -23,6 +23,74 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stopwords e simbolos a retirar\n",
+    "stop_words = set(['de','a','o','que','e','é','do','da','em','um','para','com','não','uma','os','no','se','na','por','mais','as','dos','como','mas','ao','ele','das','à','seu','sua','ou','quando','muito','nos','já','eu','também','só','pelo','pela','até','isso','ela','entre','depois','sem','mesmo','aos','seus','quem','nas','me','esse','eles','você','essa','num','nem','suas','meu','às','minha','numa','pelos','elas','qual','nós','lhe','deles','essas','esses','pelas','este','dele','tu','te','vocês','vos','lhes','meus','minhas','teu','tua','teus','tuas','nosso','nossa','nossos','nossas','dela','delas','esta','estes','estas','aquele','aquela','aqueles','aquelas','isto','aquilo','estou','está','estamos','estão','estive','esteve','estivemos','estiveram','estava','estávamos','estavam','estivera','estivéramos','esteja','estejamos','estejam','estivesse','estivéssemos','estivessem','estiver','estivermos','estiverem','hei','há','havemos','hão','houve','houvemos','houveram','houvera','houvéramos','haja','hajamos','hajam','houvesse','houvéssemos','houvessem','houver','houvermos','houverem','houverei','houverá','houveremos','houverão','houveria','houveríamos','houveriam','sou','somos','são','era','éramos','eram','fui','foi','fomos','foram','fora','fôramos','seja','sejamos','sejam','fosse','fôssemos','fossem','for','formos','forem','serei','será','seremos','serão','seria','seríamos','seriam','tenho','tem','temos','tém','tinha','tínhamos','tinham','tive','teve','tivemos','tiveram','tivera','tivéramos','tenha','tenhamos','tenham','tivesse','tivéssemos','tivessem','tiver','tivermos','tiverem','terei','terá','teremos','terão','teria','teríamos','teriam'])\n",
+    "\n",
+    "symbols = set(['-', 'r$', 'R$', '.'])\n",
+    "\n",
+    "# Doria\n",
+    "# separando as palavras\n",
+    "palavras = \"\".join(politicos['Doria']['text']).lower().split()\n",
+    "# returando stopwords e depois os web links\n",
+    "palavras = [w for w in palavras if not w in (stop_words | symbols)]\n",
+    "palavras = [w for w in palavras if re.match(r'https://*', w) == None]\n",
+    "\n",
+    "c = Counter(palavras)\n",
+    "# retirando palavras com frequencia menor do que 5 e adicionando número ao candidato\n",
+    "dados = {(1,x,y) for x,y in zip(c,c.values()) if y > 5}\n",
+    "print(\"Doria\", len(dados))\n",
+    "\n",
+    "# Bolsonaro\n",
+    "palavras = \"\".join(politicos['Bolsonaro']['text']).lower().split()\n",
+    "palavras = [w for w in palavras if not w in (stop_words | symbols)]\n",
+    "palavras = [w for w in palavras if re.match(r'https://*', w) == None]\n",
+    "\n",
+    "c = Counter(palavras)\n",
+    "d = {(2,x,y) for x,y in zip(c,c.values()) if y > 5}\n",
+    "print(\"Bolsonaro\", len(d))\n",
+    "# adicionando aos dados\n",
+    "for x in d:\n",
+    "    dados.add(x)\n",
+    "\n",
+    "# Lula\n",
+    "palavras = \"\".join(politicos['Lula']['text']).lower().split()\n",
+    "palavras = [w for w in palavras if not w in (stop_words | symbols)]\n",
+    "palavras = [w for w in palavras if re.match(r'https://*', w) == None]\n",
+    "\n",
+    "c = Counter(palavras)\n",
+    "d = {(3,x,y) for x,y in zip(c,c.values()) if y > 5}\n",
+    "print(\"Lula\", len(d))\n",
+    "for x in d:\n",
+    "    dados.add(x)\n",
+    "\n",
+    "print(\"Total\", len(dados))\n",
+    "\n",
+    "# montando o dataframe\n",
+    "df = pd.DataFrame(dados, columns=['candidato', 'texto', 'frequencia'])\n",
+    "df.sort_values('frequencia', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "palavras_unicas = set()\n",
+    "numero_total_palavras = 0\n",
+    "for c in palavras:\n",
+    "    for p in c:\n",
+    "        palavras_unicas.add(p)\n",
+    "        numero_total_palavras += 1\n",
+    "print(numero_total_palavras, len(palavras_unicas))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -60,13 +128,6 @@
     "\n",
     "print_bow(sentence)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
